feat: added keybind filter, background custom colors, blur, fastfetch and btop

--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -1,3 +1,12 @@
 # You can put custom rules here
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
+
+windowrulev2 = opacity 0.93 override 0.9 override, class:.*
+
+windowrulev2 = opacity 1 override 1 override, class:firefox
+windowrulev2 = opacity 0.85 override 0.75 override, class:kitty
+windowrulev2 = opacity 0.95 override 0.95 override, class:discord
+
+layerrule = ignorealpha 0.5, quickshell:.*
+layerrule = xray 0, quickshell:.*
