--- a/dots-extra/via-nix/hypridle.conf
+++ b/dots-extra/via-nix/hypridle.conf
@@ -1,4 +1,4 @@
-$lock_cmd = swaylock -c 000000
+$lock_cmd = hyprctl dispatch global quickshell:lock & pidof qs quickshell hyprlock || hyprlock
 # $lock_cmd = pidof hyprlock || hyprlock
 $suspend_cmd = systemctl suspend || loginctl suspend
 
@@ -10,17 +10,17 @@ general {
 }
 
 listener {
-    timeout = 300 # 5mins
+    timeout = 1800 # 30mins
     on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 600 # 10mins
+    timeout = 3600 # 60mins
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
 listener {
-    timeout = 900 # 15mins
+    timeout = 5400 # 90mins
     on-timeout = $suspend_cmd
 }
