--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -1,2 +1,13 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
+
+decoration:blur {
+    enabled = true
+    size = 9
+    passes = 3
+    new_optimizations = true
+    xray = false
+    noise = 0.05
+    contrast = 1.15
+    brightness = 0.9
+}
