--- a/dots/.config/starship.toml
+++ b/dots/.config/starship.toml
@@ -11,7 +11,7 @@ add_newline = false
 # $character
 # """
 format = """
-$cmd_duration 󰜥 $directory $git_branch
+$cmd_duration 󰜥 $directory $git_branch $git_status
 $character"""
 
 # Replace the "❯" symbol in the prompt with "➜"
@@ -39,14 +39,14 @@ format = '[\($state( $progress_current of $progress_total)\)]($style) '
 cherry_pick = "[🍒 PICKING](bold red)"
 
 [git_status]
-conflicted = " 🏳 "
-ahead = " 🏎💨 "
-behind = " 😰 "
-diverged = " 😵 "
-untracked = " 🤷 ‍"
+conflicted = " \uf11d "
+ahead = " ↑${count}"
+behind = " ↓${count}"
+diverged = "↕↑${ahead_count}↓${behind_count}"
+untracked = " \uea7f ${count} ‍"
 stashed = " 📦 "
-modified = " 📝 "
-staged = '[++\($count\)](green)'
+modified = " \uf044 +${count}"
+staged = "[\uf046 +${count}](green)"
 renamed = " ✍️ "
 deleted = " 🗑 "
 
