--- a/dots/.config/fastfetch/config.jsonc
+++ b/dots/.config/fastfetch/config.jsonc
@@ -1,1 +1,197 @@
-/home/helyan/.config/fastfetch/config.jsonc
+{
+	"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/master/doc/json_schema.json",
+	"logo": {
+		"type": "file",
+		"source": "~/.config/fastfetch/logov3.txt",
+		"color": {
+			"1": "",
+			"2": "",
+			"3": "",
+			"4": "",
+			"5": "",
+			"6": "",
+			"7": "",
+			"8": "",
+			"9": ""
+		},
+		"width": null,
+		"height": null,
+		"padding": {
+			"top": 1,
+			"left": 0,
+			"right": 4
+		},
+		"printRemaining": true,
+		"preserveAspectRatio": false,
+		"recache": false,
+		"position": "left",
+		"chafa": {
+			"fgOnly": false,
+			"symbols": "block+border+space-wide-inverted"
+		}
+	},
+	"display": {
+		"stat": false,
+		"pipe": false,
+		"showErrors": false,
+		"disableLinewrap": true,
+		"hideCursor": false,
+		"separator": ": ",
+		"color": {
+			"keys": "",
+			"title": "",
+			"output": "",
+			"separator": ""
+		},
+		"brightColor": true,
+		"duration": {
+			"abbreviation": false,
+			"spaceBeforeUnit": "default"
+		},
+		"size": {
+			"maxPrefix": "YB",
+			"binaryPrefix": "iec",
+			"ndigits": 2,
+			"spaceBeforeUnit": "default"
+		},
+		"temp": {
+			"unit": "D",
+			"ndigits": 1,
+			"color": {
+				"green": "32",
+				"yellow": "93",
+				"red": "91"
+			},
+			"spaceBeforeUnit": "default"
+		},
+		"percent": {
+			"type": ["num", "num-color"],
+			"ndigits": 0,
+			"color": {
+				"green": "32",
+				"yellow": "93",
+				"red": "91"
+			},
+			"spaceBeforeUnit": "default",
+			"width": 0
+		},
+		"bar": {
+			"char": {
+				"elapsed": "■",
+				"total": "-"
+			},
+			"border": {
+				"left": "[ ",
+				"right": " ]",
+				"leftElapsed": "",
+				"rightElapsed": ""
+			},
+			"color": {
+				"elapsed": "auto",
+				"total": "97",
+				"border": "97"
+			},
+			"width": 10
+		},
+		"fraction": {
+			"ndigits": 2
+		},
+		"noBuffer": false,
+		"key": {
+			"width": 0,
+			"type": "string",
+			"paddingLeft": 0
+		},
+		"freq": {
+			"ndigits": 2,
+			"spaceBeforeUnit": "default"
+		},
+		"constants": []
+	},
+	"general": {
+		"thread": true,
+		"processingTimeout": 5000,
+		"detectVersion": true,
+		"playerName": "",
+		"dsForceDrm": false
+	},
+	"modules": [
+		{
+			"type": "title",
+			"key": "User",
+			"format": "{user-name}"
+		},
+		{
+			"type": "title",
+			"key": "Hostname",
+			"format": "{host-name}"
+		},
+		{
+			"type": "host",
+			"key": "Model"
+		},
+		{
+			"type": "os",
+			"format": "{pretty-name} {version-id} {arch}"
+		},
+		"kernel",
+		"uptime",
+		{
+			"type": "loadavg",
+			"key": "Load Average"
+		},
+		"processes",
+		{
+			"type": "wm",
+			"key": "Window Manager"
+		},
+		{
+			"type": "de",
+			"key": "Desktop Environment"
+		},
+		"shell",
+		{
+			"type": "terminal",
+			"format": "{pretty-name} {version} {#37}█{#97}█ {#36}█{#96}█ {#35}█{#95}█ {#34}█{#94}█ {#33}█{#93}█ {#32}█{#92}█ {#31}█{#91}█ {#30}█{#90}█"
+		},
+		{
+			"type": "packages",
+			"format": "{all}"
+		},
+		{
+			"type": "cpu",
+			"key": "Temperature",
+			"temp": true,
+			"format": "{temperature}"
+		},
+		{
+			"type": "cpu",
+			"key": "CPU",
+			"format": "{cores-logical} x {name}"
+		},
+		{
+			"type": "gpu",
+			"format": "{name}"
+		},
+		{
+			"type": "memory",
+			"key": "RAM"
+		},
+		{
+			"type": "disk",
+			"key": "Disk",
+			"folders": "/"
+		},
+		{
+			"type": "localip",
+			"key": "LAN IP",
+			"showIpv6": true,
+			"showPrefixLen": false
+		},
+		{
+			"type": "publicip",
+			"key": "WAN IP",
+			"timeout": 1000
+		}
+	]
+}
