--- a/dots/.config/hypr/custom/keybinds.conf
+++ b/dots/.config/hypr/custom/keybinds.conf
@@ -1,17 +1,5 @@
-# See https://wiki.hyprland.org/Configuring/Binds/
-#!
-##! User
+# Default
+bind=Super+Alt, P, exec, qswitch --panel
+
 bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json # Edit shell config
 bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf # Edit extra keybinds
-
-# Add stuff here
-# Use #! to add an extra column on the cheatsheet
-# Use ##! to add a section in that column
-# Add a comment after a bind to add a description, like above
-
-# Prefix your comment with [hidden] to hide the keybind
-#
-# You can filter the unbinded original keybinds from the cheatsheet
-# Add a comment prefixed with [ignore] to keep the original shortcut in the cheatsheet
-# Use "#/# bind = <Mods>, <Keys>,, # Description" to describe an arbitrary shortcut
-# Use "#/# unbind = <Mods>, <Keys>" to remove a system shortcut from the cheatsheet without remove the bind
